# refactoring-synthesis

./: .gitignore  .gitmodules  README.md  ase-rebuttal.md  create-experiments-archive.sh  experiment.ps1  experiment.sh  list-test-methods.sh  nohup.out  run.sh  table.aux  table.tex  todo.txt  types.json-analysis.txt
chatgpt/: .gitignore  Cargo.toml  failed.json  query-2023-12-02-21:25:43.json  query-2023-12-27-11:33:51.json  query-2023-12-28-10:05:27.json  query.py  summary.json
chatgpt/gpt-3.5-turbo-jd/0/: query.txt  response.txt
chatgpt/gpt-3.5-turbo-jd/10/: response.txt
chatgpt/gpt-3.5-turbo-jd/101/: query.txt
chatgpt/gpt-3.5-turbo-jd/106/: response.txt
chatgpt/gpt-3.5-turbo-jd/107/: response.txt
chatgpt/gpt-3.5-turbo-jd/11/: query.txt  response.txt
chatgpt/gpt-3.5-turbo-jd/110/: query.txt  response.txt
chatgpt/gpt-3.5-turbo-jd/111/: query.txt
chatgpt/gpt-3.5-turbo-jd/112/: response.txt
chatgpt/gpt-3.5-turbo-jd/113/: query.txt
chatgpt/gpt-3.5-turbo-jd/120/: query.txt
chatgpt/gpt-3.5-turbo-jd/121/: response.txt
chatgpt/gpt-3.5-turbo-jd/122/: response.txt
chatgpt/gpt-3.5-turbo-jd/129/: query.txt
chatgpt/gpt-3.5-turbo-jd/130/: query.txt
chatgpt/gpt-3.5-turbo-jd/131/: response.txt
chatgpt/gpt-3.5-turbo-jd/132/: response.txt
chatgpt/gpt-3.5-turbo-jd/135/: response.txt
chatgpt/gpt-3.5-turbo-jd/139/: response.txt
chatgpt/gpt-3.5-turbo-jd/14/: query.txt  response.txt
chatgpt/gpt-3.5-turbo-jd/140/: response.txt
chatgpt/gpt-3.5-turbo-jd/143/: query.txt
chatgpt/javadoc-scraper/: Cargo.toml
chatgpt/src/: main.rs  openai.rs
(+4087 files in other folders)
