[package]
name = "javadoc-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-openai = "0.17.0"
clap = { version = "4.4.8", features = ["derive"] }
either = "1.9.0"
futures = "0.3.29"
reqwest = { version = "0.11.22" }
scraper = "0.18.1"
serde_json = "1.0.108"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
